--- a/app/src/main/res/layout/holder_razgo.xml
+++ b/app/src/main/res/layout/holder_razgo.xml
@@ -46,6 +46,7 @@
                 android:maxWidth="@dimen/razgo_maxwidth"
                 android:minWidth="@dimen/razgo_minwidth"
                 android:text="Hi"
+                android:textIsSelectable="true"
                 android:textColor="@color/colorBlack"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
