--- a/app/src/main/res/layout/view_settings.xml
+++ b/app/src/main/res/layout/view_settings.xml
@@ -5,7 +5,7 @@
 
     <RelativeLayout
         android:id="@+id/rl_set_pin"
-        android:padding="@dimen/space_big"
+        android:padding="@dimen/space_bigger"
         android:background="?android:attr/selectableItemBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -13,13 +13,20 @@
         <ImageView
             android:id="@+id/iv_set_pin"
             android:src="@drawable/ic_security_black_24dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:contentDescription="@string/set_pin_title"
             android:layout_width="@dimen/space_huge"
-            android:layout_height="@dimen/space_huge" />
+            android:layout_height="@dimen/space_huge"/>
 
         <TextView
             android:layout_toRightOf="@id/iv_set_pin"
             android:layout_toEndOf="@id/iv_set_pin"
-            android:textSize="@dimen/text_size_4"
+            android:textSize="@dimen/text_size_3"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/space_medium"
+            android:layout_marginStart="@dimen/space_medium"
             android:textColor="@color/colorBlack"
             android:text="@string/set_pin_title"
             android:layout_width="wrap_content"
@@ -27,38 +34,49 @@
 
     </RelativeLayout>
 
+
     <RelativeLayout
         android:id="@+id/rl_about_box"
+        android:padding="@dimen/space_bigger"
         android:layout_below="@id/rl_set_pin"
         android:background="?android:attr/selectableItemBackground"
-        android:padding="@dimen/space_big"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/iv_about_icon"
             android:src="@drawable/ic_info_outline_black_24dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:contentDescription="@string/about_text"
             android:layout_width="@dimen/space_huge"
-            android:layout_height="@dimen/space_huge"
-            android:contentDescription="@string/about_text" />
+            android:layout_height="@dimen/space_huge"/>
 
-        <TextView
-            android:id="@+id/tv_about_head"
-            android:layout_toEndOf="@id/iv_about_icon"
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_toRightOf="@id/iv_about_icon"
-            android:text="@string/about_text"
-            android:textColor="@color/colorBlack"
-            android:textSize="@dimen/text_size_5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_toEndOf="@id/iv_about_icon"
+            android:layout_marginLeft="@dimen/space_medium"
+            android:layout_marginStart="@dimen/space_medium">
 
-        <TextView
-            android:layout_below="@id/tv_about_head"
-            android:text="@string/about_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <TextView
+                android:id="@+id/tv_about_head"
+                android:textSize="@dimen/text_size_3"
+                android:textColor="@color/colorBlack"
+                android:text="@string/about_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_below="@id/tv_about_head"
+                android:text="@string/about_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </RelativeLayout>
 
     </RelativeLayout>
-
 
 </RelativeLayout>
