--- a/app/src/main/res/drawable/ic_push_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_push_black_24dp.xml
@@ -4,6 +4,11 @@
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-        android:fillColor="#FF000000"
+        android:fillColor="#FFFFFFFF"
         android:pathData="M2.01,21L23,12 2.01,3 l5,9z"/>
+    <path
+        android:fillColor="#FF000000"
+        android:pathData="M22,32
+        A10,10 0 1,1 42,32
+        A10,10 0 1,1 22,32 Z"/>
 </vector>
