--- a/app/src/main/res/layout/view_razgo_list.xml
+++ b/app/src/main/res/layout/view_razgo_list.xml
@@ -17,33 +17,58 @@
         android:paddingLeft="@dimen/space_medium"
         android:paddingTop="@dimen/space_small"
         android:paddingBottom="@dimen/space_small"
-        android:background="@color/colorDistinct"
+        android:background="@color/white"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
+        android:minHeight="@dimen/razgosender_height"
         android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/et_razgo_input"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
-            android:hint="@string/enter_message_hint"
-            android:inputType="textAutoCorrect|textMultiLine|textCapSentences"
-            android:maxLines="5"
-            android:scrollbars="vertical"
-            android:layout_toLeftOf="@id/btn_next_razgo"
-            android:layout_toStartOf="@id/btn_next_razgo"
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@id/rl_send_button"
+            android:layout_toStartOf="@id/rl_send_button"
             android:layout_marginEnd="@dimen/space_medium"
             android:layout_marginRight="@dimen/space_medium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true">
+            <EditText
+                android:id="@+id/et_razgo_input"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:background="@color/colorDistinct"
+                android:hint="@string/enter_message_hint"
+                android:inputType="textAutoCorrect|textMultiLine|textCapSentences"
+                android:maxLines="5"
+                android:scrollbars="vertical"
+                android:paddingLeft="@dimen/space_medium"
+                android:paddingStart="@dimen/space_medium"
+                android:paddingRight="@dimen/space_medium"
+                android:paddingEnd="@dimen/space_medium"
+                android:minHeight="@dimen/razgosender_height"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
 
-        <Button
-            android:id="@+id/btn_next_razgo"
-            android:background="@drawable/ic_push_black_24dp"
+        <RelativeLayout
+            android:layout_width="@dimen/space_huge"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_button"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_width="@dimen/space_gigantic"
-            android:layout_height="wrap_content"/>
+            android:layout_centerVertical="true"
+            android:id="@+id/rl_send_button">
+            <Button
+                android:id="@+id/btn_next_razgo"
+                android:background="@drawable/ic_push_black_24dp"
+                android:layout_margin="@dimen/space_small"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_width="@dimen/space_huge"
+                android:layout_height="@dimen/space_huge"/>
+        </RelativeLayout>
     </RelativeLayout>
 
     <include
