--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,6 +21,8 @@
     <dimen name="space_gigantic">40dp</dimen>
     <dimen name="space_phenomenal">80dp</dimen>
 
+    <dimen name="overview_card_corner_radius">6dp</dimen>
+
     <dimen name="razgo_maxwidth">300dp</dimen>
     <dimen name="razgo_minwidth">100sp</dimen>
     <dimen name="fab_margin">16dp</dimen>
