--- a/app/src/main/res/layout/layout_nav_header.xml
+++ b/app/src/main/res/layout/layout_nav_header.xml
@@ -9,8 +9,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:theme="@style/TextAppearance.AppCompat.Body1"
-        />
+        android:text="@string/app_name"/>
 
 </LinearLayout>
