improved view_razgo_list and made it not so contrasting

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
 
     <color name="colorBlack">#000000</color>
     <color name="colorDistinct">#E1E1E1</color>
-    <color name="colorDistinct_dark">#CCE1E1E1</color>
+    <color name="colorDistinct_dark">#C5C5C5</color>
 
     <color name="colorSelf">#a5be88</color>
     <color name="colorOther">#e9c692</color>
