--- a/app/src/main/res/layout/view_razgo_list.xml
+++ b/app/src/main/res/layout/view_razgo_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="@color/colorDistinct_dark">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_razgolist"
@@ -16,8 +17,8 @@
         android:paddingStart="@dimen/space_medium"
         android:paddingLeft="@dimen/space_medium"
         android:paddingTop="@dimen/space_small"
-        android:paddingBottom="@dimen/space_small"
-        android:background="@color/black"
+        android:paddingBottom="@dimen/space_normal"
+        android:background="00000000"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:minHeight="@dimen/razgosender_height"
